src/test/regression_testing/test_files/Python/NPD/good/test08.py
def test8_main():
    var = None
    var = str(var)
    print(var[0])

if __name__ == "__main__":
    test8_main()
